# MahjongGL

./: .gitmodules  CMakeLists.txt  README.md
include/: shader.hpp
src/: main.cpp  shader.cpp
